2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* src/addressbook_window.cpp, src/endpoint.cpp, src/main_window.cpp,
	src/sipendpoint.cpp: Protected calls to the tray by if (tray).

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/about/Makefile.am, lib/druid/Makefile.am, lib/e-splash.c,
	lib/Makefile.am, lib/widgets/Makefile.am, lib/xdap/Makefile.am,
	src/callbacks.cpp, src/chat_window.cpp, src/druid.cpp,
	src/log_window.cpp, src/main_window.cpp, src/Makefile.am,
	src/pref_window.cpp, src/tools.cpp: Modified the way pixmaps are
	found, preparing the way for a nice win32 fix.

2005-12-11  Julien Puydt  <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Simplified finding the schemas.

2005-12-08  Julien Puydt  <jpuydt@free.fr>

	* src/main_window.cpp: Protected the call to
	gtk_window_set_urgency_hint by a #ifdef to save the win32 build.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/sipendpoint.cpp: Set the NAT binding timeout based on the 
	GConf key.

2005-12-08  Damien Sandras  <dsandras@gnome.org>
	
	* gnomemeeting.schemas.in.in: Increased RTP port range. It can be
	reduced for small installations, or increased further for big
	installations with non symmetric NAT. Added adjustable NAT binding
	refresh timeout.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: A few optimizations.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Added a few hints to make sure you do not 
	have to search for your incoming call popup on all desktops to 
	answer the call.

2005-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/pcssendpoint.cpp, src/endpoint.cpp: Fixed bug reported by 
	Christoph Lukas (stats being reset when receiving
	an incoming call while already being in a call).

2005-12-08  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.cpp (GMEndPoint::OnGatewayIPTimeout): Protected a call
	to a gm_conf function from threading, and added a test on ip_checking
	before checking the ip (!)
