@@ -1,5 +1,10 @@
 2005-12-11  Julien Puydt  <jpuydt@free.fr>
 
+	* src/ils.cpp, src/main_window.cpp, src/Makefile.am: Modified the way
+	the datadir is found, again preparing the way for a nice win32 fix.
+
+2005-12-11  Julien Puydt  <jpuydt@free.fr>
+
 	* src/addressbook_window.cpp, src/endpoint.cpp, src/main_window.cpp,
 	src/sipendpoint.cpp: Protected calls to the tray by if (tray).
 
